# palmdb-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.adoc
src/: lib.rs
