[package]
authors = ["Paul Woolcock <pwoolcock@tenable.com>"]
name = "palmdb"
version = "0.1.0"
repository = "https://github.com/pwoolcoc/palmdb-rs"
homepage = "https://github.com/pwoolcoc/palmdb-rs"
license = "MIT/Apache-2.0"
readme = "README.adoc"
documentation = "https://docs.rs/palmdb"
description = """
Parses PalmDB files
"""

[dependencies]
bitflags = "0.9.1"
error-chain = "0.10.0"
clippy = {version = "0.0.148", optional = true}

[dependencies.nom]
version = "3.2.0"
features = ["verbose-errors"]

[dev-dependencies.nom-test-helpers]
version = "3.0.0"
features = ["verbose-errors"]

[features]
default = []
dev = ["clippy"]
